--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
   <div class="ball"></div>
   
-  <div id="game"></div>
+  <div id="game">
+    <h1>Click on the screen</h1>
+  </div>
 
   <script src="script.js" type="module"></script>
   </body>
