--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
   </head>
   <body>
 
-  <div class="ball"></div>
+  <!-- <div class="ball"></div> -->
   
   <div id="game">
-    <h1>Click on the screen</h1>
+
+    <div class="commande">
+    
+      <button class="add-ball">Click add ball</button>
+      <button class="remove-ball">remove all the balls</button>
+    
+    </div>
+  
   </div>
 
   <script src="script.js" type="module"></script>
